--- a/src/template.html
+++ b/src/template.html
@@ -9,8 +9,13 @@
 	<link rel="stylesheet" href="index.css" />
 	<link rel='manifest' href='manifest.json'>
 	<link rel='icon' type='image/png' href='favicon.png'>
-	<link rel="dns-prefetch" href="//fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+	<link rel="dns-prefetch" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+	<link rel="dns-prefetch" href="https://ajax.googleapis.com">
+	<link rel="preconnect" href="https://ajax.googleapis.com" crossorigin>
+	<!-- ios support -->
+	<link rel="apple-touch-icon" href="/logo-512.png" />
+	<meta name="apple-mobile-web-app-status-bar" content="#333333">
 	<meta name="apple-mobile-web-app-title" content="MY APP NAME">
 	<meta name="application-name" content="MY APP NAME">
 
@@ -33,6 +38,17 @@
 	     and anything else it needs to hydrate the app and
 	     initialise the router -->
 	%sapper.scripts%
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Quattrocento:400,700&display=swap&subset=latin-ext" rel="stylesheet">
+	<script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Lato:400,700', 'Quattrocento:400,700' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
 </body>
 </html>
